bug(UI): Aligned headers and refactored UI
Edited profile page of User and removed transitions

[finishes #166030713]

--- a/css/adminPostRepayment.css
+++ b/css/adminPostRepayment.css
@@ -166,6 +166,10 @@ footer>a {
     font-size: 25px;
 }
 #titleOfPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
     width: 300px;
     height: 100%;
 }
